--- a/inputShowHide.html
+++ b/inputShowHide.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
   <div id="wrapper">
     <div id="parent">
@@ -28,14 +30,29 @@
     let radios = document.querySelectorAll("input[type=radio]")
     let inputs = document.querySelectorAll("input[type=text]")
 
+    for (let i = 0; i < radios.length; i++) {
+      radios[i].onclick = () => {
+        if (radios[i].value === "cricket") {
+          for (let j = 0; j < inputs.length; j++) {
+            inputs[j].setAttribute("disabled", "disabled")
+          }
+        }
+        else{
+          for (let j = 0; j < inputs.length; j++) {
+            inputs[j].removeAttribute("disabled")
+          }
+        }
+      }
+    }
+
     radios.forEach((radio) => {
       radio.onclick = () => {
-        if(radio.value === "cricket"){
+        if (radio.value === "cricket") {
           inputs.forEach((input) => {
             input.setAttribute("disabled", "disabled")
           })
         }
-        else{
+        else {
           inputs.forEach((input) => {
             input.removeAttribute("disabled")
           })
@@ -44,4 +61,5 @@
     })
   </script>
 </body>
+
 </html>
