disabled attribute updated

--- a/inputShowHide.html
+++ b/inputShowHide.html
@@ -34,7 +34,7 @@
       radios[i].onclick = () => {
         if (radios[i].value === "cricket") {
           for (let j = 0; j < inputs.length; j++) {
-            inputs[j].setAttribute("disabled", "disabled")
+            inputs[j].setAttribute("disabled", true)
           }
         }
         else{
