changes in palindrome & input showHide

--- a/palindrome.html
+++ b/palindrome.html
@@ -15,7 +15,7 @@
     const btn = document.querySelector("button")
     const para = document.createElement("p")
     btn.onclick = () => {
-      const word = document.querySelector("input").value;
+      const word = document.querySelector("input").value.toLowerCase();
       const wordReverse = word.split('').reverse().join('');
       para.innerHTML = (word === wordReverse) ? "Word is a Palindrome" : "Word is not a Palindrome";
       document.querySelector("#wrapper").appendChild(para);
