--- a/formValidation/formValidation.html
+++ b/formValidation/formValidation.html
@@ -38,6 +38,32 @@
       <button type="submit">Submit</button>
     </form>
 
+
+
+    <table>
+      <tr>
+        <th>S.No</th>
+        <th>Name</th>
+        <th>Age</th>
+        <th>Phone</th>
+        <th>Email</th>
+        <th>Gender</th>
+        <th>Hometown</th>
+        <th>Actions</th>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>Rohit Jain</td>
+        <td>32</td>
+        <td>8824453320</td>
+        <td>rohit@fullstacklearning.com</td>
+        <td>male</td>
+        <td>Jaipur</td>
+        <td><a href="">Edit</a></td>
+        <td><a href="">Delete</a></td>
+      </tr>
+    </table>
+
   </div>
   <script>
 
