higher order, spread, destructing

--- a/panicFunction.html
+++ b/panicFunction.html
@@ -36,9 +36,9 @@ WINTER 😱 IS 😱 COMING!
     // console.log(panic("winter is coming")) 
 
     function panic(input) {
-      return (input.includes(" "))
-        ? input.replace(/ /g, " 😱 ").toUpperCase() + "!"
-        : input.toUpperCase() + "!"
+      return (input.includes(" ")) 
+      ? input.replace(/ /g, ' 😱 ').toUpperCase() + "!" 
+      : input.toUpperCase() + "!"
     }
 
     console.log(panic("Hello"));
