--- a/shoppingList/index.html
+++ b/shoppingList/index.html
@@ -25,7 +25,7 @@
         <div class="form-group">
           <div class="container">
             <p>Section</p>
-            <select name="" id="">
+            <select name="" id="" required>
               <option value="" selected disabled>Categories</option>
               <option value="fruits-vegetables">Fruits & Vegetables</option>
               <option value="meat-seafood">Meat & Seafood</option>
@@ -41,13 +41,13 @@
 
           <div class="container">
             <p>Quantity</p>
-            <input type="text">
+            <input type="text" id="quantity" required>
           </div>
         </div>
 
         <div class="form-group">
           <p>Name</p>
-          <input type="text">
+          <input type="text" id="name" required>
         </div>
 
         <div class="form-group">
@@ -133,6 +133,35 @@
       <p>Powered by <strong>Javascript</strong></p>
     </footer>
   </div>
+
+  <script>
+    const addToList = document.querySelector("form a")
+    addToList.addEventListener("click", function(e){
+      e.preventDefault()
+      const select = document.querySelector("select")
+      const quantity = document.querySelector("#quantity")
+      const name = document.querySelector("#name")
+
+      const para = document.createElement("p")
+      para.classList.add("item")
+
+      const crossIcon = document.createElement("i")
+      crossIcon.classList.add("fa-solid", "fa-circle-xmark", "delete")
+      para.appendChild(crossIcon)
+
+      const nameValue = document.createElement("span")
+      nameValue.innerText = name.value
+      para.appendChild(nameValue)
+
+      const quantityValue = document.createElement("span")
+      quantityValue.innerText = quantity.value
+      para.appendChild(quantityValue)
+
+      document.querySelector("#show ." + select.value + " .items").appendChild(para)
+    })
+  </script>
+
+
 </body>
 
 </html>
