--- a/flagQuiz/index.html
+++ b/flagQuiz/index.html
@@ -39,27 +39,7 @@
     </div>
   </div>
 
-  <script>
-
-    // Object Literal
-    // Object.create
-    // for..in loop
-
-    // Object.keys
-    // Object.entries
-    // Object.hasOwn
-
-
-    const person = {
-      name: 'Shubham',
-      age: 25,
-      hometown: 'Jaipur',
-      phone: 1234567890,
-    }
-
-
-
-  </script>
+  <script src="index.js" type="module"></script>
 </body>
 
 </html>
