--- a/flagQuiz/index.html
+++ b/flagQuiz/index.html
@@ -20,12 +20,12 @@
         <h2>Fun With Flags</h2>
       </div>
       <div class="question-counter">
-        <div class="count">1</div>
+        <div class="count"></div>
       </div>
 
       <div class="questions">
         <div class="question">
-          <img src="https://flagcdn.com/za.svg" alt="">
+          <img src="" alt="">
         </div>
         <div class="options">
           <ul>
