--- a/wordPuzzles/index.html
+++ b/wordPuzzles/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Word Puzzles</title>
+    <title>Word Puzzles Game in Vanilla JS</title>
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
