added timer and displayed results

--- a/wordPuzzles/index.html
+++ b/wordPuzzles/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Word Puzzles Game in Vanilla JS</title>
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css" />
+    <!-- <link rel="stylesheet" href="style.css" /> -->
   </head>
   <body>
     <div id="wrapper">
@@ -15,12 +15,14 @@
         <div class="counter"></div>
       </div>
 
-      <form action="" method="post">
+      <form>
         <div id="puzzles"></div>
         <button type="submit">Submit</button>
       </form>
+
+      <div id="results"></div>
     </div>
 
-    <script src="wordPuzzles.js" type="module"></script>
+    <script src="wordPuzzles.js"></script>
   </body>
 </html>
