--- a/wordPuzzles/index.html
+++ b/wordPuzzles/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Word Puzzles Game in Vanilla JS</title>
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
-    <!-- <link rel="stylesheet" href="style.css" /> -->
   </head>
   <body>
     <div id="wrapper">
@@ -23,6 +22,6 @@
       <div id="results"></div>
     </div>
 
-    <script src="wordPuzzles.js"></script>
+    <script src="wordPuzzles.js" type="module"></script>
   </body>
 </html>
