html,css, basic js setup

--- a/memory-game-js/index.html
+++ b/memory-game-js/index.html
@@ -1,19 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Memory Game in Javascript</title>
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
-    <meta name="keywords" content="javascript,memory game,html,css">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
+    <meta name="keywords" content="javascript,memory game,html,css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div id="wrapper">
-        <h1>How good's your memory??</h1>
-        
+      <h1>How good's your memory??</h1>
+      <div id="start">
+        <button id="startBtn">Let's Find Out</button>
+      </div>
+      <div id="game">
+        <div id="game-container">
+          <div id="game-board">
+            <div class="flip-card">
+              <div class="inner">
+                <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
+                <div class="back"><img src="images/shahrukh.jpg" alt="flip it"></div>
+              </div>
+            </div>
+            <div class="flip-card">
+              <div class="inner">
+                <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
+                <div class="back"><img src="images/shahrukh.jpg" alt="flip it"></div>
+              </div>
+            </div>
+            <div class="flip-card">
+              <div class="inner">
+                <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
+                <div class="back"><img src="images/shahrukh.jpg" alt="flip it"></div>
+              </div>
+            </div>
+            <div class="flip-card">
+              <div class="inner">
+                <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
+                <div class="back"><img src="images/shahrukh.jpg" alt="flip it"></div>
+              </div>
+            </div>
+            <div class="flip-card">
+              <div class="inner">
+                <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
+                <div class="back"><img src="images/shahrukh.jpg" alt="flip it"></div>
+              </div>
+            </div>
+            <div class="flip-card">
+              <div class="inner">
+                <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
+                <div class="back"><img src="images/shahrukh.jpg" alt="flip it"></div>
+              </div>
+            </div>
+            <div class="flip-card">
+              <div class="inner">
+                <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
+                <div class="back"><img src="images/shahrukh.jpg" alt="flip it"></div>
+              </div>
+            </div>
+            <div class="flip-card">
+              <div class="inner">
+                <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
+                <div class="back"><img src="images/shahrukh.jpg" alt="flip it"></div>
+              </div>
+            </div>
+            <div class="flip-card">
+              <div class="inner">
+                <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
+                <div class="back"><img src="images/shahrukh.jpg" alt="flip it"></div>
+              </div>
+            </div>
+            <div class="flip-card">
+              <div class="inner">
+                <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
+                <div class="back"><img src="images/shahrukh.jpg" alt="flip it"></div>
+              </div>
+            </div>
+            <div class="flip-card">
+              <div class="inner">
+                <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
+                <div class="back"><img src="images/shahrukh.jpg" alt="flip it"></div>
+              </div>
+            </div>
+            <div class="flip-card">
+              <div class="inner">
+                <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
+                <div class="back"><img src="images/shahrukh.jpg" alt="flip it"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
