--- a/memory-game-js/index.html
+++ b/memory-game-js/index.html
@@ -21,73 +21,73 @@
             <div class="flip-card">
               <div class="inner">
                 <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
-                <div class="back"><img src="images/shahrukh.jpg" alt="flip it"></div>
+                <div class="back"><img src="" alt="flip it"></div>
               </div>
             </div>
             <div class="flip-card">
               <div class="inner">
                 <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
-                <div class="back"><img src="images/shahrukh.jpg" alt="flip it"></div>
+                <div class="back"><img src="" alt="flip it"></div>
               </div>
             </div>
             <div class="flip-card">
               <div class="inner">
                 <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
-                <div class="back"><img src="images/shahrukh.jpg" alt="flip it"></div>
+                <div class="back"><img src="" alt="flip it"></div>
               </div>
             </div>
             <div class="flip-card">
               <div class="inner">
                 <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
-                <div class="back"><img src="images/shahrukh.jpg" alt="flip it"></div>
+                <div class="back"><img src="" alt="flip it"></div>
               </div>
             </div>
             <div class="flip-card">
               <div class="inner">
                 <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
-                <div class="back"><img src="images/shahrukh.jpg" alt="flip it"></div>
+                <div class="back"><img src="" alt="flip it"></div>
               </div>
             </div>
             <div class="flip-card">
               <div class="inner">
                 <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
-                <div class="back"><img src="images/shahrukh.jpg" alt="flip it"></div>
+                <div class="back"><img src="" alt="flip it"></div>
               </div>
             </div>
             <div class="flip-card">
               <div class="inner">
                 <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
-                <div class="back"><img src="images/shahrukh.jpg" alt="flip it"></div>
+                <div class="back"><img src="" alt="flip it"></div>
               </div>
             </div>
             <div class="flip-card">
               <div class="inner">
                 <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
-                <div class="back"><img src="images/shahrukh.jpg" alt="flip it"></div>
+                <div class="back"><img src="" alt="flip it"></div>
               </div>
             </div>
             <div class="flip-card">
               <div class="inner">
                 <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
-                <div class="back"><img src="images/shahrukh.jpg" alt="flip it"></div>
+                <div class="back"><img src="" alt="flip it"></div>
               </div>
             </div>
             <div class="flip-card">
               <div class="inner">
                 <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
-                <div class="back"><img src="images/shahrukh.jpg" alt="flip it"></div>
+                <div class="back"><img src="" alt="flip it"></div>
               </div>
             </div>
             <div class="flip-card">
               <div class="inner">
                 <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
-                <div class="back"><img src="images/shahrukh.jpg" alt="flip it"></div>
+                <div class="back"><img src="" alt="flip it"></div>
               </div>
             </div>
             <div class="flip-card">
               <div class="inner">
                 <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
-                <div class="back"><img src="images/shahrukh.jpg" alt="flip it"></div>
+                <div class="back"><img src="" alt="flip it"></div>
               </div>
             </div>
           </div>
