--- a/countryStateCity.html
+++ b/countryStateCity.html
@@ -4,18 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Country State City</title>
+    <link rel="stylesheet" href="countryStateCity.css" />
   </head>
   <body>
     <div id="wrapper">
-      <select name="" id="country">
-        <option value="" selected disabled>Select Country</option>
-      </select>
-      <select name="" id="state">
-        <option value="" selected disabled>Select State</option>
-      </select>
-      <select name="" id="city">
-        <option value="" selected disabled>Select City</option>
-      </select>
+      <h1>Fetching State & City by Country</h1>
+      <div class="container">
+        <select name="" id="country">
+          <option value="" selected disabled>Select Country</option>
+        </select>
+        <select name="" id="state">
+          <option value="" selected disabled>Select State</option>
+        </select>
+        <select name="" id="city">
+          <option value="" selected disabled>Select City</option>
+        </select>
+      </div>
     </div>
     <script>
       const country = document.querySelector("#country");
