--- a/netflixCloneJS/index.html
+++ b/netflixCloneJS/index.html
@@ -1,12 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Netflix Clone</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="wrapper">
+      <div id="sidebar">
+        <div class="logo">
+          <img src="images/netflix-logo.png" alt="Logo Netflix" />
+        </div>
+        <div class="genreList">
+          <ul></ul>
+        </div>
+      </div>
+      <div id="movies">
+        <h1>Trending Movies</h1>
+      </div>
+    </div>
+    <script>
+      const API_KEY = "8125db8f67d23da1d30f6063b1b794b8";
+      const img_base_path = "https://image.tmdb.org/t/p/original";
+      const moviesDiv = document.querySelector("#movies");
+      const genreList = document.querySelector(".genreList ul");
+      async function fetchGenres() {
+        const response = await fetch(
+          "https://api.themoviedb.org/3/genre/movie/list?language=en&api_key="+API_KEY
+        );
+        const result = await response.json();
+        console.log(result.genres);
+        showGenres(result.genres);
+      }
+      async function fetchTrendingMovies() {
+        const response = await fetch(
+          "https://api.themoviedb.org/3/discover/movie?include_adult=false&include_video=false&language=en-US&page=1&sort_by=popularity.desc&api_key=" +
+            API_KEY
+        );
+        const result = await response.json();
+        // console.log(result.results)
+        showMovies(result.results);
+      }
+      function showGenres(data){
+        data.forEach((genre) => {
+            const li = document.createElement("li")
+            const anchor = document.createElement("a")
+            anchor.href="/genre/" + genre.id
+            anchor.innerHTML = genre.name
+            li.append(anchor)
+            genreList.append(li)
+        })
+      }
+      function showMovies(data) {
+        data.forEach((movie) => {
+          const div = document.createElement("div");
+          div.classList.add("movie");
+          const poster = document.createElement("img");
+          poster.src = img_base_path + movie.poster_path;
+          const title = document.createElement("h3");
+          title.innerHTML = movie.name || movie.original_title;
+          div.append(poster);
+          div.append(title);
+          moviesDiv.append(div);
+        });
+      }
+      fetchGenres()
+      fetchTrendingMovies();
+    </script>
+  </body>
 </html>
