--- a/netflixCloneJS/index.html
+++ b/netflixCloneJS/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="wrapper">
+    <div id="wrapper" class="netflix">
       <div id="sidebar">
         <div class="logo">
           <img src="images/netflix-logo.png" alt="Logo Netflix" />
@@ -18,16 +18,18 @@
       </div>
       <div id="movies">
         <h1>Trending Movies</h1>
+        <div class="movie-wrapper"></div>
       </div>
     </div>
     <script>
       const API_KEY = "8125db8f67d23da1d30f6063b1b794b8";
       const img_base_path = "https://image.tmdb.org/t/p/original";
-      const moviesDiv = document.querySelector("#movies");
+      const moviesDiv = document.querySelector("#movies .movie-wrapper");
       const genreList = document.querySelector(".genreList ul");
       async function fetchGenres() {
         const response = await fetch(
-          "https://api.themoviedb.org/3/genre/movie/list?language=en&api_key="+API_KEY
+          "https://api.themoviedb.org/3/genre/movie/list?language=en&api_key=" +
+            API_KEY
         );
         const result = await response.json();
         console.log(result.genres);
@@ -42,15 +44,15 @@
         // console.log(result.results)
         showMovies(result.results);
       }
-      function showGenres(data){
+      function showGenres(data) {
         data.forEach((genre) => {
-            const li = document.createElement("li")
-            const anchor = document.createElement("a")
-            anchor.href="/genre/" + genre.id
-            anchor.innerHTML = genre.name
-            li.append(anchor)
-            genreList.append(li)
-        })
+          const li = document.createElement("li");
+          const anchor = document.createElement("a");
+          anchor.href = "/genre/" + genre.id;
+          anchor.innerHTML = genre.name;
+          li.append(anchor);
+          genreList.append(li);
+        });
       }
       function showMovies(data) {
         data.forEach((movie) => {
@@ -65,8 +67,16 @@
           moviesDiv.append(div);
         });
       }
-      fetchGenres()
+      function toggleSidebarStickyness() {
+        window.onscroll = () => {
+          window.scrollY > 70
+            ? document.querySelector(".genreList").classList.add("sticky")
+            : document.querySelector(".genreList").classList.remove("sticky")
+        };
+      }
+      fetchGenres();
       fetchTrendingMovies();
+      window.addEventListener("scroll", toggleSidebarStickyness);
     </script>
   </body>
 </html>
