added trailer functionality

--- a/netflixCloneJS/index.html
+++ b/netflixCloneJS/index.html
@@ -21,6 +21,11 @@
         <div class="movie-wrapper"></div>
       </div>
     </div>
+    <div class="modal">
+      <div class="iframe-wrapper">
+        <span class="close-modal">&times;</span>
+      </div>
+    </div>
     <script src="scripts.js"></script>
   </body>
 </html>
