--- a/priceSlider/index.html
+++ b/priceSlider/index.html
@@ -8,12 +8,11 @@
   </head>
   <body>
     <div id="wrapper">
-        <label for="priceSlider" class="priceSlider">
-            <input type="range" min="10" max="100" />
-            <span>10</span>
-            <span>100</span>
-        </label>
-      
+      <label for="priceSlider" class="priceSlider">
+        <input type="range" min="10" max="100" />
+        <span>10</span>
+        <span>100</span>
+      </label>
 
       <div class="prices">
         <div class="price disabled">
@@ -38,7 +37,7 @@
           <h3>$499<small>/yr</small></h3>
           <button>Get this Pack</button>
         </div>
-        <div class="price">
+        <div class="price disabled">
           <h2>Price Pack 3</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus
