--- a/netflixCloneJS/index.html
+++ b/netflixCloneJS/index.html
@@ -19,6 +19,9 @@
       <div id="movies">
         <h1>Trending Movies</h1>
         <div class="movie-wrapper"></div>
+        <div class="paging">
+          
+        </div>
       </div>
     </div>
     <div class="modal">
