--- a/memory-game-js/index.html
+++ b/memory-game-js/index.html
@@ -20,74 +20,98 @@
           <div id="game-board">
             <div class="flip-card">
               <div class="inner">
-                <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
-                <div class="back"><img src="" alt="flip it"></div>
+                <div class="front">
+                  <img src="images/questionMark.jpg" alt="flip it" />
+                </div>
+                <div class="back"><img src="" alt="flip it" /></div>
               </div>
             </div>
             <div class="flip-card">
               <div class="inner">
-                <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
-                <div class="back"><img src="" alt="flip it"></div>
+                <div class="front">
+                  <img src="images/questionMark.jpg" alt="flip it" />
+                </div>
+                <div class="back"><img src="" alt="flip it" /></div>
               </div>
             </div>
             <div class="flip-card">
               <div class="inner">
-                <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
-                <div class="back"><img src="" alt="flip it"></div>
+                <div class="front">
+                  <img src="images/questionMark.jpg" alt="flip it" />
+                </div>
+                <div class="back"><img src="" alt="flip it" /></div>
               </div>
             </div>
             <div class="flip-card">
               <div class="inner">
-                <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
-                <div class="back"><img src="" alt="flip it"></div>
+                <div class="front">
+                  <img src="images/questionMark.jpg" alt="flip it" />
+                </div>
+                <div class="back"><img src="" alt="flip it" /></div>
               </div>
             </div>
             <div class="flip-card">
               <div class="inner">
-                <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
-                <div class="back"><img src="" alt="flip it"></div>
+                <div class="front">
+                  <img src="images/questionMark.jpg" alt="flip it" />
+                </div>
+                <div class="back"><img src="" alt="flip it" /></div>
               </div>
             </div>
             <div class="flip-card">
               <div class="inner">
-                <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
-                <div class="back"><img src="" alt="flip it"></div>
+                <div class="front">
+                  <img src="images/questionMark.jpg" alt="flip it" />
+                </div>
+                <div class="back"><img src="" alt="flip it" /></div>
               </div>
             </div>
             <div class="flip-card">
               <div class="inner">
-                <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
-                <div class="back"><img src="" alt="flip it"></div>
+                <div class="front">
+                  <img src="images/questionMark.jpg" alt="flip it" />
+                </div>
+                <div class="back"><img src="" alt="flip it" /></div>
               </div>
             </div>
             <div class="flip-card">
               <div class="inner">
-                <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
-                <div class="back"><img src="" alt="flip it"></div>
+                <div class="front">
+                  <img src="images/questionMark.jpg" alt="flip it" />
+                </div>
+                <div class="back"><img src="" alt="flip it" /></div>
               </div>
             </div>
             <div class="flip-card">
               <div class="inner">
-                <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
-                <div class="back"><img src="" alt="flip it"></div>
+                <div class="front">
+                  <img src="images/questionMark.jpg" alt="flip it" />
+                </div>
+                <div class="back"><img src="" alt="flip it" /></div>
               </div>
             </div>
             <div class="flip-card">
               <div class="inner">
-                <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
-                <div class="back"><img src="" alt="flip it"></div>
+                <div class="front">
+                  <img src="images/questionMark.jpg" alt="flip it" />
+                </div>
+                <div class="back"><img src="" alt="flip it" /></div>
               </div>
             </div>
             <div class="flip-card">
               <div class="inner">
-                <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
-                <div class="back"><img src="" alt="flip it"></div>
+                <div class="front">
+                  <img src="images/questionMark.jpg" alt="flip it" />
+                </div>
+                <div class="back"><img src="" alt="flip it" /></div>
               </div>
             </div>
             <div class="flip-card">
               <div class="inner">
-                <div class="front"><img src="images/questionMark.jpg" alt="flip it"></div>
-                <div class="back"><img src="" alt="flip it"></div>
+                <div class="front">
+                  <img src="images/questionMark.jpg" alt="flip it" />
+                </div>
+                <div class="back"><img src="" alt="flip it" /></div>
               </div>
             </div>
           </div>
