--- a/memory-game-js/index.html
+++ b/memory-game-js/index.html
@@ -116,6 +116,7 @@
             </div>
           </div>
         </div>
+        <div id="startTimer">10</div>
       </div>
     </div>
     <script src="script.js"></script>
