added click count in memory game

--- a/memory-game-js/index.html
+++ b/memory-game-js/index.html
@@ -12,6 +12,7 @@
   <body>
     <div id="wrapper">
       <h1>How good's your memory??</h1>
+      <h4>Find all pairs in <em><span>least time</span></em> & with <em><span>minimum clicks</span></em></h4>
       <div id="start">
         <button id="startBtn">Let's Find Out</button>
       </div>
@@ -116,7 +117,8 @@
             </div>
           </div>
         </div>
-        <div id="startTimer">10</div>
+        <div id="startTimer">60</div>
+        <div id="clickCounter">Clicks: <span>0</span></div>
       </div>
     </div>
     <script src="script.js"></script>
