--- a/memory-game-js/index.html
+++ b/memory-game-js/index.html
@@ -120,6 +120,10 @@
         <div id="startTimer">60</div>
         <div id="clickCounter">Clicks: <span>0</span></div>
       </div>
+      <div id="over">
+        <h1>GAME OVER</h1>
+        <div id="score"></div>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
