--- a/expense tracker/expenseTracker.html
+++ b/expense tracker/expenseTracker.html
@@ -8,87 +8,41 @@
   </head>
   <body>
     <div id="wrapper">
-      <div id="information">
-        <div id="totalDiv">
-          <input
-            type="text"
-            placeholder="Enter Total Budget for this month"
-            id="total"
-          />
+      <div id="screens">
+        <div id="screen1">
+          <input type="text" placeholder="Enter your budget for this month" required autofocus />
+          <button>Set Budget</button>
         </div>
+        <div id="screen2" class="disabled">
+          <div id="information">
+            <div id="info">
+              <h3 id="totalHeading">Total: <span></span></h3>
+              <h3 id="spentHeading">Spent: <span></span></h3>
+              <h3 id="remainingHeading">Remaining: <span></span></h3>
+            </div>
+          </div>
 
-        <div id="info">
-          <h3 id="totalHeading">Total: <span></span></h3>
-          <h3 id="spentHeading">Spent: <span></span></h3>
-          <h3 id="remainingHeading">Remaining: <span></span></h3>
+          <div id="enterExpense">
+            <form action="">
+              <input type="text" placeholder="Expense Detail" required /><br />
+              <input type="text" placeholder="Expense Amount" required /><br />
+              <button type="submit">Add Expense</button>
+            </form>
+          </div>
+
+          <div id="expenseTracker">
+            <table>
+              <tr>
+                <th>S.No</th>
+                <th>Info</th>
+                <th>Amount</th>
+              </tr>
+            </table>
+          </div>
         </div>
-      </div>
-
-      <div id="enterExpense">
-        <form action="">
-          <input type="text" placeholder="Expense Detail" /><br />
-          <input type="text" placeholder="Expense Amount" /><br />
-          <button type="submit">Add Expense</button>
-        </form>
-      </div>
-
-      <div id="expenseTracker">
-        <table>
-          <tr>
-            <th>S.No</th>
-            <th>Info</th>
-            <th>Amount</th>
-          </tr>
-        </table>
       </div>
     </div>
 
-    <script>
-      const total = document.querySelector("#total");
-      const totalHeading = document.querySelector("#totalHeading span");
-      const spentHeading = document.querySelector("#spentHeading span");
-      const remainingHeading = document.querySelector("#remainingHeading span");
-      const form = document.querySelector("form");
-      const table = document.querySelector("table");
-
-      total.addEventListener("blur", () => {
-        if (total.value > 0) {
-          totalHeading.innerHTML = total.value;
-          spentHeading.innerHTML = 0;
-          remainingHeading.innerHTML = total.value;
-        }
-      });
-
-      form.addEventListener("submit", (e) => {
-        e.preventDefault();
-
-        //put in table
-
-        // Step1: find the sno
-        const sno = table.children.length;
-
-        //Step2: create the row
-        const tr = document.createElement("tr");
-
-        for (let i = 0; i < 3; i++) {
-          const td = document.createElement("td");
-          if (i === 0) td.innerHTML = sno;
-          else td.innerHTML = form.elements[i - 1].value;
-
-          tr.append(td);
-        }
-        table.append(tr);
-
-        //Step3: subtract from remaining, add to spent
-
-        spentHeading.innerHTML =
-          Number(spentHeading.innerHTML) + Number(form.elements[1].value);
-
-
-        if (remainingHeading.innerHTML !== "")
-          remainingHeading.innerHTML =
-            Number(remainingHeading.innerHTML) - Number(form.elements[1].value);
-      });
-    </script>
+    <script src="expenseTracker.js"></script>
   </body>
 </html>
