--- a/drumkit/index.html
+++ b/drumkit/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="wrapper"></div>
+    <div id="wrapper">
+        <div id="left">
+            <h1>Drum Rolls Please...!!!</h1>
+        </div>
+        <div id="right"></div>
+    </div>
     <script src="scripts.js"></script>
 </body>
 </html>
