updates to multiple projects

--- a/typingTest/index.html
+++ b/typingTest/index.html
@@ -7,28 +7,18 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="wrapper">
-      <div id="test">
-        <div class="reference">
-          <p>
-            My name is Rohit Jain. I am a sofware developer and a trainer. I
-            teach programming concepts. Languages I specialize in are HTML, CSS,
-            Javascript, ReactJS, NodeJS and MongoDB
-          </p>
-        </div>
-
-        <div class="user">
-          <textarea
-            name=""
-            placeholder="Type Here..."
-            id=""
-            cols="30"
-            rows="10"
-          ></textarea>
-        </div>
+    <div class="container">
+      <h1>Typing Test</h1>
+      <div class="quote-display">
+        <p id="quote"></p>
+      </div>
+      <div class="textarea-container">
+        <textarea id="textarea" autofocus></textarea>
+      </div>
+      <div class="result-container">
+        <p id="result"></p>
       </div>
     </div>
-
     <script src="script.js"></script>
   </body>
 </html>
