added image extractor

--- a/chromeExtension/index.html
+++ b/chromeExtension/index.html
@@ -10,6 +10,10 @@
     <h1>Change Background Color</h1>
     <input type="text" id="color-input" placeholder="Enter a color" />
     <button id="click-me">Click Me!</button>
+
+    <h2>Image Extractor</h2>
+    <button id="fetch-images">Fetch Images</button>
+
     <script src="popup.js"></script>
   </body>
 </html>
