minor changes in HTML & JS

--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -19,7 +19,7 @@
 
         <div class="filteration">
           <select name="" id="filterByType">
-            <option value="" selected disabled>Filter By Type</option>
+            <option value="" selected>Filter By Type</option>
             <option value="normal">Normal</option>
             <option value="fire">Fire</option>
             <option value="water">Water</option>
@@ -53,7 +53,7 @@
 
         <div class="filteration">
           <select name="" id="filterByType">
-            <option value="" selected disabled>Filter By Type</option>
+            <option value="" selected>Filter By Type</option>
             <option value="normal">Normal</option>
             <option value="fire">Fire</option>
             <option value="water">Water</option>
