--- a/movieSearch/index.html
+++ b/movieSearch/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div id="wrapper">
-      <header class="mx-auto w-3/4 text-center my-4">
+      <header class="text-center w-full sm:w-3/4 mx-0 sm:mx-auto my-4">
         <h2 class="text-3xl font-black mb-4">MOVIE SEARCH</h2>
-        <form action="" class="mb-3 flex gap-2 justify-center">
+        <form action="" class="mb-3 flex flex-wrap gap-2 justify-center">
           <input
             type="text"
             placeholder="Search Anything..."
